# HotSpot

./: hotspot.md
.cursor/rules/: project.mdc
.github/instructions/: project.instructions.md
backend/: .env  .env.example  .env.test  .gitignore  .rustfmt.toml  Cargo.toml  README.md
backend/migrations/: 00_extensions.sql  00_readme.md  01_users.sql  02_user_locations.sql  03_groups.sql  04_group_members.sql  05_group_messages.sql  06_conversations.sql  07_direct_messages.sql  08_tags.sql  09_checkins.sql  10_checkin_tags.sql  11_checkin_likes.sql  12_group_events.sql
backend/src/: lib.rs  main.rs
backend/src/config/: app_config.rs  db.rs  location.rs  mod.rs  routes.rs
backend/src/controllers/: checkin_controller.rs  group_controller.rs  message_controller.rs  mod.rs  user_controller.rs
backend/src/middleware/: auth.rs
backend/src/models/: constants.rs  mod.rs  websocket.rs
backend/src/models/api/: checkin.rs  group.rs  message.rs  mod.rs  user.rs
backend/src/routes/: checkin_routes.rs  group_routes.rs  message_routes.rs  mod.rs  user_routes.rs
backend/src/services/: checkin_service.rs  config_service.rs  group_service.rs  message_service.rs  mod.rs  user_service.rs  ws_service.rs
backend/src/utils/: jwt.rs  permission.rs  response.rs
backend/src/validators/: checkin_validator.rs  common_validator.rs  group_validator.rs  message_validator.rs  mod.rs  user_validator.rs
backend/src/ws/: handler.rs  message_queue.rs  mod.rs  session.rs  types.rs
frontend/: .env.example  README.md  eslint.config.js  nuxt.config.ts  package.json
(+35 files in other folders)
