[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
rand = "0.9.0"
redis = "0.29.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.4", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full", "test-util"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
rand = "0.9.0"
chrono = { version = "0.4.40", features = ["serde"] }
serde_json = "1.0.140"

[[test]]
name = "integration_tests"
path = "tests/mod.rs"
